--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
+.App {
+  text-align: center;
+}
+
 #filter-div {
   display: flex;
   justify-content: center;
   align-items: center;
   background: skyblue;
-
 }
 
 #good-dog-filter {
